# bazel-example

./: .gitignore  BUILD  README.md  WORKSPACE  bazel-bazel-example  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs
service/post/: BUILD.bazel  go.mod  main.go  post
service/post/pong/: BUILD.bazel  a.go  pong.go  pong_test.go
service/user/: BUILD.bazel  go.mod  go.sum  main.go
service/user/ping/: BUILD.bazel  b.go  ping.go  ping_suite_test.go  ping_test.go
