load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["ping.go"],
    importpath = "github.com/notsu/bazel-example/service/user/ping",
    visibility = ["//visibility:public"],
    deps = ["//service/post/pong:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["ping_test.go"],
    embed = [":go_default_library"],
)
